--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,2 @@
-<% provide(:title, 'Home') %>
-
 <h1>Sample App</h1>
-<p>Home page for the Ruby on Rails Tutorial Sample Application.  </p>
+<p>PROTOTYPICAL</p>
