Finish user signup

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="center hero-unit">
-  <h1>Welcome to PROTOTYPICAL</h1>
+  <h1>PROTOTYPICAL</h1>
 
   <h2>
-    The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application
+    (The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application)
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
